mariadb vector implementation last correction/improvement